--- a/docs/theme/css/variables.css
+++ b/docs/theme/css/variables.css
@@ -57,6 +57,13 @@
   --search-mark-bg: #e3b171;
 
   --color-scheme: dark;
+
+  /* Same as `--icons` */
+  --copy-button-filter: invert(45%) sepia(6%) saturate(621%) hue-rotate(198deg)
+    brightness(99%) contrast(85%);
+  /* Same as `--sidebar-active` */
+  --copy-button-filter-hover: invert(68%) sepia(55%) saturate(531%)
+    hue-rotate(341deg) brightness(104%) contrast(101%);
 }
 
 .coal {
@@ -101,6 +108,13 @@
   --search-mark-bg: #355c7d;
 
   --color-scheme: dark;
+
+  /* Same as `--icons` */
+  --copy-button-filter: invert(26%) sepia(8%) saturate(575%) hue-rotate(169deg)
+    brightness(87%) contrast(82%);
+  /* Same as `--sidebar-active` */
+  --copy-button-filter-hover: invert(36%) sepia(70%) saturate(503%)
+    hue-rotate(167deg) brightness(98%) contrast(89%);
 }
 
 .light {
@@ -145,6 +159,12 @@
   --search-mark-bg: #a2cff5;
 
   --color-scheme: light;
+
+  /* Same as `--icons` */
+  --copy-button-filter: invert(45.49%);
+  /* Same as `--sidebar-active` */
+  --copy-button-filter-hover: invert(14%) sepia(93%) saturate(4250%)
+    hue-rotate(243deg) brightness(99%) contrast(130%);
 }
 
 .navy {
@@ -189,6 +209,13 @@
   --search-mark-bg: #a2cff5;
 
   --color-scheme: dark;
+
+  /* Same as `--icons` */
+  --copy-button-filter: invert(51%) sepia(10%) saturate(393%) hue-rotate(198deg)
+    brightness(86%) contrast(87%);
+  /* Same as `--sidebar-active` */
+  --copy-button-filter-hover: invert(46%) sepia(20%) saturate(1537%)
+    hue-rotate(156deg) brightness(85%) contrast(90%);
 }
 
 .rust {
@@ -232,7 +259,12 @@
   --searchresults-li-bg: #dec2a2;
   --search-mark-bg: #e69f67;
 
-  --color-scheme: light;
+  /* Same as `--icons` */
+  --copy-button-filter: invert(51%) sepia(10%) saturate(393%) hue-rotate(198deg)
+    brightness(86%) contrast(87%);
+  /* Same as `--sidebar-active` */
+  --copy-button-filter-hover: invert(77%) sepia(16%) saturate(1798%)
+    hue-rotate(328deg) brightness(98%) contrast(83%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -276,5 +308,12 @@
     --searchresults-border-color: #98a3ad;
     --searchresults-li-bg: #2b2b2f;
     --search-mark-bg: #355c7d;
+
+    /* Same as `--icons` */
+    --copy-button-filter: invert(26%) sepia(8%) saturate(575%)
+      hue-rotate(169deg) brightness(87%) contrast(82%);
+    /* Same as `--sidebar-active` */
+    --copy-button-filter-hover: invert(36%) sepia(70%) saturate(503%)
+      hue-rotate(167deg) brightness(98%) contrast(89%);
   }
 }
